--- a/Video-Information-Crawling_cn.ipynb
+++ b/Video-Information-Crawling_cn.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +156,12 @@
    "source": [
     "To know the video attribute of Youtube video and its details, please refer to https://developers.google.com/youtube/v3/docs/videos\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-07-004356.png)"
+    "![](assets/屏幕截图-2023-05-10-095953.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,19 +213,19 @@
     "\n",
     "1. Open the `YouTube` channel page you want to scrape.\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-05-164509.png)\n",
+    "![](assets/屏幕截图-2023-05-10-095003.png)\n",
     "\n",
     "2. Use `F12` or right mouse button \"Inspect (`Inspect Element`)\" to open the browser's debugging tool\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-05-152759.png)\n",
+    "![](assets/屏幕截图-2023-05-10-094914.png)\n",
     "\n",
     "3. Find the search bar or use the shortcut key `Ctrl+F` to search for \"`/channel/`\". A channel ID is a string of characters in the URL, usually beginning with \"`/channel/`\", for example:\n",
     "\n",
-    "    - /channel/UCoC47do520os_4DBMEFGg4A\n",
+    "    - /channel/UCqECaJ8Gagnn7YCbPEzWH6g\n",
     "\n",
-    "    In these examples, the channel ID is \"`UCoC47do520os_4DBMEFGg4A`\"\n",
+    "    In these examples, the channel ID is \"`UCqECaJ8Gagnn7YCbPEzWH6g`\"\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-05-164639.png)\n",
+    "![](assets/屏幕截图-2023-05-10-095202.png)\n",
     "\n",
     "\n",
     "4. Copy the channel `ID` to the `Python` code and replace `channel_id`."
@@ -233,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run():\n",
     "    # YouTube channel name\n",
-    "    channel_name = \"李子柒 Liziqi\"\n",
+    "    channel_name = \"Taylor Swift\"\n",
     "    # YouTube channel ID\n",
-    "    channel_id = \"UCoC47do520os_4DBMEFGg4A\"\n",
+    "    channel_id = \"UCqECaJ8Gagnn7YCbPEzWH6g\"\n",
     "    # Get all video information of the specified YouTube channel\n",
     "    videos = get_channel_videos(channel_id)\n",
     "    # Save the specified YouTube video information to a csv file\n",
@@ -252,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Video information has been saved to 李子柒 Liziqi.csv\n"
+      "Video information has been saved to Taylor Swift.csv\n"
      ]
     }
    ],
@@ -283,17 +283,17 @@
     "\n",
     "2. Switch to the \"Data\" menu, select the data source as \"From Text\", select the CSV file, and select the exported CSV file\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-07-002433.png)\n",
+    "![](assets/屏幕截图-2023-05-10-095352.png)\n",
     "\n",
     "\n",
     "3. The text import wizard appears, select \"65001: Unicode (UTF-8)\" for the original format of the file, select \"comma\" for the separator, and finally click Load\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-07-002517.png)\n",
+    "![](assets/屏幕截图-2023-05-10-095520.png)\n",
     "\n",
     "\n",
     "4. Finally get the normal decoded xlsx file\n",
     "\n",
-    "![](assets/屏幕截图-2023-05-07-002608.png)"
+    "![](assets/屏幕截图-2023-05-10-095653.png)"
    ]
   }
  ],
