--- a/Video-Information-Crawling_zn.ipynb
+++ b/Video-Information-Crawling_zn.ipynb
@@ -231,9 +231,9 @@
    "source": [
     "def run():\n",
     "    # YouTube频道名称\n",
-    "    channel_name = \"文昭思緒飛揚 - Wen Zhao Studio\"\n",
+    "    channel_name = \"李子柒 Liziqi\"\n",
     "    # YouTube频道ID\n",
-    "    channel_id = \"UCTu_hTaVf3DJMpMIyOAq2Ew\"\n",
+    "    channel_id = \"UCoC47do520os_4DBMEFGg4A\"\n",
     "    # 获取指定YouTube频道的所有视频信息\n",
     "    videos = get_channel_videos(channel_id)\n",
     "    # 将指定的YouTube视频信息保存到csv文件\n",
@@ -244,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "视频信息已保存到 文昭思緒飛揚 - Wen Zhao Studio.csv\n"
+      "视频信息已保存到 李子柒 Liziqi.csv\n"
      ]
     }
    ],
